# internal/server/http.go
@@ -1,25 +1,47 @@
 package server
 
 import (
+	"context"
+
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/auth/jwt"
 	"github.com/go-kratos/kratos/v2/middleware/logging"
 	"github.com/go-kratos/kratos/v2/middleware/metadata"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
+	"github.com/go-kratos/kratos/v2/middleware/selector"
 	"github.com/go-kratos/kratos/v2/middleware/tracing"
 	"github.com/go-kratos/kratos/v2/transport/http"
 	"github.com/go-kratos/swagger-api/openapiv2"
+	jwtv5 "github.com/golang-jwt/jwt/v5"
 
 	adminpb "github.com/omalloc/kratos-admin/api/console/administration"
+	passportpb "github.com/omalloc/kratos-admin/api/console/passport"
 	"github.com/omalloc/kratos-admin/internal/conf"
 	"github.com/omalloc/kratos-admin/internal/service"
 )
 
+func NewWhiteListMatcher() selector.MatchFunc {
+	whiteList := make(map[string]struct{})
+	whiteList[passportpb.OperationPassportLogin] = struct{}{}
+	whiteList[passportpb.OperationPassportLogout] = struct{}{}
+	whiteList[passportpb.OperationPassportRegister] = struct{}{}
+	whiteList[passportpb.OperationPassportResetPassword] = struct{}{}
+	whiteList[passportpb.OperationPassportSendCaptcha] = struct{}{}
+	return func(ctx context.Context, operation string) bool {
+		if _, ok := whiteList[operation]; ok {
+			return false
+		}
+		return true
+	}
+}
+
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, logger log.Logger,
+func NewHTTPServer(c *conf.Server, passportc *conf.Passport, logger log.Logger,
 	// admin
 	user *service.UserService,
 	role *service.RoleService,
 	permission *service.PermissionService,
+	passport *service.PassportService,
 ) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
@@ -27,6 +49,13 @@ func NewHTTPServer(c *conf.Server, logger log.Logger,
 			metadata.Server(),
 			tracing.Server(),
 			logging.Server(logger),
+			selector.Server(
+				jwt.Server(func(token *jwtv5.Token) (interface{}, error) {
+					return []byte(passportc.Secret), nil
+				}),
+			).
+				Match(NewWhiteListMatcher()).
+				Build(),
 		),
 	}
 	if c.Http.Network != "" {
@@ -44,5 +73,6 @@ func NewHTTPServer(c *conf.Server, logger log.Logger,
 	adminpb.RegisterUserHTTPServer(srv, user)
 	adminpb.RegisterRoleHTTPServer(srv, role)
 	adminpb.RegisterPermissionHTTPServer(srv, permission)
+	passportpb.RegisterPassportHTTPServer(srv, passport)
 	return srv
 }
